--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "sinon": "4.1.2",
     "sinon-chai": "2.14.0",
     "truffle": "3.4.9"
+  },
+  "dependencies": {
+    "bluebird": "3.5.1"
   }
 }
