--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "truffle": "3.4.9"
   },
   "dependencies": {
-    "bluebird": "3.5.1"
+    "bluebird": "3.5.1",
+    "web3": "0.20.2"
   }
 }
